--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -22,11 +22,11 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Magazine", "Index", "Orders")</li>
                     <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
-                    <li>@Html.ActionLink("Address", "Index", "Address")</li>
+                    <li>@Html.ActionLink("Addresses", "Index", "Addresses")</li>
                     <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                     <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                     <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
-                    <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
+                    <li>@Html.ActionLink("Producers", "Index", "Producers")</li>
                     <li>@Html.ActionLink("Alko", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
