--- a/PubDBApplication/PubDBApplication/Views/Addresses/Delete.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Addresses/Delete.cshtml
@@ -7,7 +7,18 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
+@if (ViewBag.Exception == null)
+{
+    <h3> Are you sure you want to delete this?</h3>
+}
+else
+{
+    <h3> <font color="red">DB Server Exception</font></h3>
+    <h5><font color="red">@ViewBag.Exception</font></h5>
+}
+
+
 <div>
     <h4>Address</h4>
     <hr />
@@ -46,7 +57,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
