--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -16,16 +16,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("PubDB", "Index", "Addresses", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("PubDB", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Addresses", "Index", "Addresses")</li>
+                    <li>@Html.ActionLink("Producers", "Index", "Producers")</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
+        @if (ViewBag.Exception == null)
+        {
+
+        }
+        else
+        {
+            <h3> <font color="red">DB Server Exception</font></h3>
+            <h5><font color="red">@ViewBag.Exception</font></h5>
+        }
         @RenderBody()
         <hr />
         <footer>
