--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Addresses", "Index", "Addresses")</li>
-                    <li>@Html.ActionLink("Producers", "Index", "Producers")</li>
+                    <li>@Html.ActionLink("Producers", "Index", "ProducersViews")</li>
+                    <li>@Html.ActionLink("Products", "Index", "ProductsViews")</li>
+                    <li>@Html.ActionLink("Pubs", "Index", "PubsViews")</li>
                 </ul>
             </div>
         </div>
