--- a/PubDBApplication/PubDBApplication/Views/ProductsViews/Details.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/ProductsViews/Details.cshtml
@@ -11,6 +11,13 @@
     <h4>ProductsView</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.id)
+        </dd>
     </dl>
 </div>
 <p>
