--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Producers", "Index", "ProducersViews")</li>
                     <li>@Html.ActionLink("Products", "Index", "ProductsViews")</li>
                     <li>@Html.ActionLink("Pubs", "Index", "PubsViews")</li>
+                    <li>@Html.ActionLink("Orders", "Index", "OrdersViews")</li>
+                    <li>@Html.ActionLink("OrdersDETAILS", "Index", "OrderDetailsViews")</li>
                 </ul>
             </div>
         </div>
