--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Details.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Details.cshtml
@@ -66,6 +66,14 @@
         <dd>
             @Html.DisplayFor(model => model.date)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.total)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.total)
+        </dd>
     </dl>
 
     <table class="table">
@@ -82,6 +90,9 @@
             <th>
                 product
             </th>
+            <th>
+                partial_price
+            </th>
 
             <th></th>
         </tr>
@@ -94,7 +105,7 @@
             </td>
 
             <td>
-               @item.order_id
+                @item.order_id
             </td>
 
             <td>
@@ -105,12 +116,16 @@
                 @item.product_name
             </td>
 
+            <td>
+                @item.partial_price
+            </td>
+
             <td />
         </tr>
         }
 
     </table>
-
+    <h3> TOTAL PRICE: @Html.DisplayFor(model => model.total)</h3>
 
 
 
