--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Delete.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Delete.cshtml
@@ -7,22 +7,80 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this order?</h3>
 <div>
-    <h4>OrdersView</h4>
+    <h4>Orders</h4>
     <hr />
+    <h4>If you delete this order, also all products from this order will be removed.</h4>
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Incoming_Outcoming)
+            ID
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.id)
+        </dd>
+
+        <dt>
+            Warehouse Name
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.warehouse_name)
+        </dd>
+
+        <dt>
+            Pub Name
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.pub_name)
+        </dd>
+
+        <dt>
+            Producer Name
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.producer_name)
+        </dd>
+
+        <dt>
+            Incoming/Outcoming
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Incoming_Outcoming)
         </dd>
 
+        <dt>
+            Order Status
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.status)
+        </dd>
+
+        <dt>
+            Date
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.date)
+        </dd>
+
+        <dt>
+            Total Price
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.total)
+        </dd>
+
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
