--- a/PubDBApplication/PubDBApplication/Views/Addresses/Details.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Addresses/Details.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.building_no)
+           Building No
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.street)
+           Street
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.city)
+            City
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.postal_code)
+            Postal Code
         </dt>
 
         <dd>
