--- a/PubDBApplication/PubDBApplication/Views/ProducersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/ProducersViews/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Producers</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -13,28 +13,28 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.id)
+           ID
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.name)
+            Producer Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.e_mail)
+            E-Mail
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.telephone_no)
+            Telephone No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.street)
+            Street
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.building_no)
+            Building No
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.postal_code)
+            Postal Code
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.city)
+            City
         </th>
         <th></th>
     </tr>
