--- a/PubDBApplication/PubDBApplication/Views/ProductsViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/ProductsViews/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Products</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -13,19 +13,22 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.name)
+           ID
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.producer_name)
+            Product Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.price)
+            Producer Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.alcohol_percentage)
+            Price
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.volume)
+            Alcohol Percentage
+        </th>
+        <th>
+            Volume
         </th>
         <th></th>
     </tr>
@@ -33,6 +36,9 @@
     @foreach (var item in Model)
     {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.id)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.name)
         </td>
@@ -43,14 +49,13 @@
             @Html.DisplayFor(modelItem => item.price)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.alcohol_percentage)
+            @Html.DisplayFor(modelItem => item.alcohol_percentage)%
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.volume)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.id }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.id })
         </td>
     </tr>
