--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("Products", "Index", "ProductsViews")</li>
                     <li>@Html.ActionLink("Pubs", "Index", "PubsViews")</li>
                     <li>@Html.ActionLink("Orders", "Index", "OrdersViews")</li>
-                    <li>@Html.ActionLink("OrdersDETAILS", "Index", "OrderDetailsViews")</li>
+                    <li>@Html.ActionLink("Orders Details", "Index", "OrderDetailsViews")</li>
                 </ul>
             </div>
         </div>
