--- a/PubDBApplication/PubDBApplication/Views/Addresses/Delete.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Addresses/Delete.cshtml
@@ -14,7 +14,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.building_no)
+            Building No
         </dt>
 
         <dd>
@@ -22,7 +22,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.street)
+            Street
         </dt>
 
         <dd>
@@ -30,7 +30,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.city)
+           City
         </dt>
 
         <dd>
@@ -38,7 +38,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.postal_code)
+           Postal Code
         </dt>
 
         <dd>
