--- a/PubDBApplication/PubDBApplication/Views/Addresses/Edit.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Addresses/Edit.cshtml
@@ -18,7 +18,8 @@
         @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.building_no, htmlAttributes: new { @class = "control-label col-md-2" })
+            <font class="control-label col-md-2"><b>Building No</b></font>
+
             <div class="col-md-10">
                 @Html.EditorFor(model => model.building_no, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.building_no, "", new { @class = "text-danger" })
@@ -26,7 +27,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.street, htmlAttributes: new { @class = "control-label col-md-2" })
+            <font class="control-label col-md-2"><b>Street</b></font>
+
             <div class="col-md-10">
                 @Html.EditorFor(model => model.street, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.street, "", new { @class = "text-danger" })
@@ -34,7 +36,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.city, htmlAttributes: new { @class = "control-label col-md-2" })
+            <font class="control-label col-md-2"><b>City</b></font>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.city, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.city, "", new { @class = "text-danger" })
@@ -42,7 +44,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.postal_code, htmlAttributes: new { @class = "control-label col-md-2" })
+            <font class="control-label col-md-2"><b>Postal Code</b></font>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.postal_code, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.postal_code, "", new { @class = "text-danger" })
