--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Delete.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Delete.cshtml
@@ -7,11 +7,10 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this order?</h3>
+<h3>Are you sure you want to cancel this order?</h3>
 <div>
-    <h4>Orders</h4>
     <hr />
-    <h4>If you delete this order, also all products from this order will be removed.</h4>
+    <h4>If you cancel this order, also all products from this order will be removed.</h4>
     <dl class="dl-horizontal">
         <dt>
             ID
@@ -84,7 +83,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Cancel" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
