--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -8,10 +8,11 @@
 <h2>Orders</h2>
 
 <p>
-    @Html.ActionLink("Create New Order", "Create")
+    @Html.ActionLink("Create new incoming order", "CreateIncoming") | 
+    @Html.ActionLink("Create new outcoming order", "CreateOutcoming")
 </p>
 <table class="table">
-    <tr><td colspan="9"><h4><b>Warehouse Incoming Orders</b></h4></td></tr>
+    <tr><td colspan="7"><h4><b>Warehouse Incoming Orders</b></h4></td></tr>
     <tr>
         <th>
             ID
@@ -21,12 +22,6 @@
         </th>
         <th>
             Pub Name
-        </th>
-        <th>
-            Producer Name
-        </th>
-        <th>
-            Incoming/Outcoming
         </th>
         <th>
             Order Status
@@ -53,12 +48,6 @@
             @Html.DisplayFor(modelItem => item.pub_name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.producer_name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Incoming_Outcoming)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.status)
         </td>
         <td>
@@ -69,13 +58,17 @@
         </td>
 
         <td>
-            @Html.ActionLink("Details", "Details", new { id = item.id }) |
-            @Html.ActionLink("Cancel", "Delete", new { id = item.id })
+            @Html.ActionLink("Details", "Details", new { id = item.id })
+            @if (!item.status.Equals("Completed"))
+            {
+                <font>|</font>
+                @Html.ActionLink("Cancel", "Delete", new { id = item.id })
+            }
         </td>
     </tr>
     }
-    <tr><td colspan="9"></td></tr>
-    <tr><td colspan="9"><h4><b>Warehouse Outcoming Orders</b></h4></td></tr>
+    <tr><td colspan="7"></td></tr>
+    <tr><td colspan="7"><h4><b>Warehouse Outcoming Orders</b></h4></td></tr>
     <tr>
         <th>
            ID
@@ -84,13 +77,7 @@
             Warehouse Name
         </th>
         <th>
-            Pub Name
-        </th>
-        <th>
             Producer Name
-        </th>
-        <th>
-            Incoming/Outcoming
         </th>
         <th>
             Order Status
@@ -114,13 +101,7 @@
             @Html.DisplayFor(modelItem => item.warehouse_name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.pub_name)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.producer_name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Incoming_Outcoming)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.status)
